* Remove ``NO_DOCUTILS_TITLE_TRANSFORM`` setting,
  this is now default behavior if ``USE_REST_DOCINFO_METADATA``
  is disabled (Issue #2382, #3124)
* Enforce trailing slash for directories in ``nikola auto``
  (Issue #3140)
* Galleries with baguetteBox don’t glitch out on the first image
  anymore (Issue #3141)

Removed features
----------------

* The ``webassets`` library is no longer required, we now manually
  bundle files (Issue #3074)

New in v8.0.0b3 (changes since Beta 2)
======================================

Features
--------

* New data_file option for chart shortcode and directive (Issue #3129)
* Show the filename of the missing file when ``nikola serve`` can't
  find a file (i.e. when an 404 error occurs).
* Better error messages for JSON download failures in ``nikola
  plugin`` and  ``nikola theme`` (Issue getnikola/plugins#282)
* Use Babel instead of the locale module to better handle
  localizations (Issues #2606, #3121)
* Change ``DATE_FORMAT`` formats to CLDR formats (Issue #2606)

Bugfixes
--------

* Pass arguments to youtube directive unchanged (Issue #3150)
* Fix listing installed themes if theme directory is missing.
* Watch correct output folder in ``nikola auto`` (Issue #3119)
* Fix post fragment dependencies when posts are only available in a
  non-default language (Issue #3112)
* Implement ``MARKDOWN_EXTENSION_CONFIGS`` properly (Issue #2970)
* Ignore ``.DS_Store`` when processing listings (Issue #3099)
* Remove redundant check for tag similarity (Mentioned in Issue #3123)

New in v8.0.0b2 (changes since Beta 1)
======================================


Important compatibility changes not mentioned previously
--------------------------------------------------------

* You need ``<a class="reference">`` (instead of ``image-reference``)
  to activate the lightbox now

Features
--------

* Add ``NAVIGATION_ALT_LINKS`` option, displayed on the right side in
  bootstrap4/bootblog4 (Issue #3030)