@@ -256,9 +256,6 @@ COMPILERS = ${COMPILERS}
 # already contains the text), set this to False.
 # SHOW_BLOG_TITLE = True
 
-# Writes tag cloud data in form of tag_cloud_data.json.
-WRITE_TAG_CLOUD = False
-
 # Paths for different autogenerated bits. These are combined with the
 # translation paths.
 
@@ -300,7 +297,7 @@ WRITE_TAG_CLOUD = False
 # }
 
 # If you do not want to display a tag publicly, you can mark it as hidden.
-# The tag will not be displayed on the tag list page, the tag cloud and posts.
+# The tag will not be displayed on the tag list page and posts.
 # Tag pages will still be generated.
 HIDDEN_TAGS = ['mathjax']
 
