@@ -1,12 +1,0 @@
-[Core]
-name = render_tag_cloud
-module = tagcloud
-
-[Documentation]
-author = Roberto Alsina
-version = 1.0
-website = https://getnikola.com/
-description = Copy page sources into the output.
-
-[Nikola]
-PluginCategory = Task
